# TestChat

./: .gitignore  CMakeLists.txt  Client.cpp  README.md  Server.cpp  Server.hpp  User.cpp  User.hpp
resource/: PseudoList.backup  PseudoList.json
src/: Client.cpp  Server.cpp  Server.hpp  User.hpp
